--- a/PowerPlant/Base.lproj/Main.storyboard
+++ b/PowerPlant/Base.lproj/Main.storyboard
@@ -84,13 +84,16 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ATU-25-a6r">
                                                             <rect key="frame" x="0.0" y="0.0" width="142.5" height="18"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Maintenance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs7-0c-eU2">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maintenance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cs7-0c-eU2">
                                                                     <rect key="frame" x="0.0" y="0.0" width="97" height="18"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" constant="97" id="DtO-8K-dJd"/>
+                                                                    </constraints>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pal-Sm-gml">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pal-Sm-gml">
                                                                     <rect key="frame" x="105" y="0.0" width="37.5" height="18"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                     <nil key="textColor"/>
@@ -160,37 +163,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="9Ca-FY-f47">
-                                <rect key="frame" x="10" y="114" width="104" height="61.5"/>
+                                <rect key="frame" x="0.0" y="114" width="110" height="61.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LV8-6V-AZp">
-                                        <rect key="frame" x="57" y="0.0" width="47" height="20.5"/>
+                                        <rect key="frame" x="63" y="0.0" width="47" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Difficulty:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JgE-F5-dKy">
-                                        <rect key="frame" x="31" y="20.5" width="73" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maintenance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JgE-F5-dKy">
+                                        <rect key="frame" x="7" y="20.5" width="103" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Water Needs:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ofB-uR-z5B">
-                                        <rect key="frame" x="0.0" y="41" width="104" height="20.5"/>
+                                        <rect key="frame" x="6" y="41" width="104" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="110" id="rML-jM-aS2"/>
+                                </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRl-j7-u43">
-                                <rect key="frame" x="49" y="255" width="264" height="75"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="tips" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dRl-j7-u43">
+                                <rect key="frame" x="0.0" y="220.5" width="375" height="114"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="114" id="PJA-Gg-438"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="WDz-ss-CL3">
-                                <rect key="frame" x="123" y="114" width="98.5" height="61.5"/>
+                                <rect key="frame" x="115" y="114" width="106.5" height="61.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PlantType" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4R0-hL-rtF">
                                         <rect key="frame" x="0.0" y="0.0" width="75.5" height="20.5"/>
@@ -212,17 +220,28 @@
                                     </label>
                                 </subviews>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tips" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Asp-6i-je8">
-                                <rect key="frame" x="36" y="228" width="90" height="19"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tips" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Asp-6i-je8">
+                                <rect key="frame" x="0.0" y="198" width="375" height="20.5"/>
                                 <color key="backgroundColor" red="0.72595524288709157" green="0.8228222150259068" blue="0.79359577200845433" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="7vn-Il-3oG"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNx-If-fKZ">
-                                <rect key="frame" x="0.0" y="338" width="350" height="116"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wHw-IE-nGT">
+                                <rect key="frame" x="0.0" y="335" width="375" height="21"/>
+                                <color key="backgroundColor" red="0.72595524290000002" green="0.82282221499999997" blue="0.79359577199999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20.5" id="d7D-Az-SQy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Details" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KNx-If-fKZ">
+                                <rect key="frame" x="0.0" y="356" width="375" height="311"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -230,10 +249,29 @@
                         </subviews>
                         <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="WDz-ss-CL3" firstAttribute="leading" secondItem="9Ca-FY-f47" secondAttribute="trailing" constant="9" id="5tG-5I-5yU"/>
+                            <constraint firstItem="dRl-j7-u43" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="3Qw-Gt-xYA"/>
+                            <constraint firstItem="KNx-If-fKZ" firstAttribute="bottom" secondItem="U4z-E4-b4b" secondAttribute="bottom" id="5h6-ci-6At"/>
+                            <constraint firstItem="WDz-ss-CL3" firstAttribute="leading" secondItem="9Ca-FY-f47" secondAttribute="trailing" constant="5" id="5tG-5I-5yU"/>
+                            <constraint firstItem="wHw-IE-nGT" firstAttribute="top" secondItem="dRl-j7-u43" secondAttribute="bottom" id="Jsy-no-PEF"/>
+                            <constraint firstItem="wHw-IE-nGT" firstAttribute="top" secondItem="dRl-j7-u43" secondAttribute="bottom" id="Jv9-f4-sb4"/>
+                            <constraint firstItem="WDz-ss-CL3" firstAttribute="top" secondItem="U4z-E4-b4b" secondAttribute="top" constant="50" id="Kwn-4Y-F2q"/>
+                            <constraint firstItem="dRl-j7-u43" firstAttribute="trailing" secondItem="U4z-E4-b4b" secondAttribute="trailing" id="M4D-DB-k5L"/>
+                            <constraint firstItem="KNx-If-fKZ" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="MlC-w4-ESi"/>
+                            <constraint firstItem="dRl-j7-u43" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="Pll-jP-V6l"/>
+                            <constraint firstItem="KNx-If-fKZ" firstAttribute="top" secondItem="wHw-IE-nGT" secondAttribute="bottom" id="Teq-8S-apd"/>
                             <constraint firstItem="9Ca-FY-f47" firstAttribute="top" secondItem="U4z-E4-b4b" secondAttribute="top" constant="50" id="Zn9-nv-x2e"/>
-                            <constraint firstItem="9Ca-FY-f47" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" constant="10" id="kdK-KI-z9k"/>
+                            <constraint firstItem="wHw-IE-nGT" firstAttribute="leading" secondItem="MVc-Rx-pBr" secondAttribute="leading" id="gHr-XM-Zw6"/>
+                            <constraint firstItem="Asp-6i-je8" firstAttribute="top" secondItem="WDz-ss-CL3" secondAttribute="bottom" constant="22.5" id="iyJ-0z-Kj8"/>
+                            <constraint firstItem="Asp-6i-je8" firstAttribute="trailing" secondItem="U4z-E4-b4b" secondAttribute="trailing" id="jFa-nN-Qz7"/>
+                            <constraint firstItem="9Ca-FY-f47" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="kdK-KI-z9k"/>
+                            <constraint firstItem="U4z-E4-b4b" firstAttribute="trailing" secondItem="wHw-IE-nGT" secondAttribute="trailing" id="mmk-Ka-hl4"/>
+                            <constraint firstItem="U4z-E4-b4b" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="WDz-ss-CL3" secondAttribute="trailing" constant="153.5" id="pTv-hk-7xo"/>
+                            <constraint firstItem="Asp-6i-je8" firstAttribute="leading" secondItem="U4z-E4-b4b" secondAttribute="leading" id="qU1-0k-Mry"/>
                             <constraint firstItem="WDz-ss-CL3" firstAttribute="top" secondItem="9Ca-FY-f47" secondAttribute="bottom" constant="-61.5" id="qZO-Lg-Cik"/>
+                            <constraint firstItem="dRl-j7-u43" firstAttribute="top" secondItem="Asp-6i-je8" secondAttribute="bottom" constant="2" id="qz0-Vx-1RR"/>
+                            <constraint firstItem="Asp-6i-je8" firstAttribute="top" secondItem="9Ca-FY-f47" secondAttribute="bottom" constant="22.5" id="rUK-a5-7JB"/>
+                            <constraint firstItem="U4z-E4-b4b" firstAttribute="trailing" secondItem="dRl-j7-u43" secondAttribute="trailing" id="wXd-28-KmO"/>
+                            <constraint firstItem="KNx-If-fKZ" firstAttribute="trailing" secondItem="U4z-E4-b4b" secondAttribute="trailing" id="wjA-Lv-ajz"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="U4z-E4-b4b"/>
                     </view>
